Style fix for form elements Adjust height, min-weight and text alignment for date and time inputs (for iOS).

--- a/src/includes/_forms.scss
+++ b/src/includes/_forms.scss
@@ -367,13 +367,12 @@ select {
     }
     // Multiple select
     &[multiple] {
-        padding: calc(var(--padding-buttons) * 0.8571) 0;
         overflow: visible auto;
         // Fix height for iOS
         min-height: calc(var(--padding-buttons) * 0.8571 * 2 + 1px + 1.1rem);
 
         option {
-            padding: 2px var(--padding-buttons);
+            padding: 2px 0;
             background-color: transparent;
 
             &:checked {
